make swag
